1Entrega/y.output
Gramática

    0 $accept: programa $end

    1 $@1: /* vacío */

    2 programa: PROGRAM $@1 est_declaracion bloque ENDP

    3 $@2: /* vacío */

    4 est_declaracion: DECVAR $@2 declaraciones ENDDEC

    5 declaraciones: declaracion
    6              | declaraciones declaracion

    7 $@3: /* vacío */

    8 declaracion: lista_var $@3 PCOMA type

    9 type: REAL
   10     | STRING

   11 lista_var: ID
   12          | lista_var COMA ID

   13 $@4: /* vacío */

   14 bloque: $@4 sentencia
   15       | bloque sentencia

   16 sentencia: ciclow
   17          | seleccion
   18          | asignacion
   19          | teclado
   20          | reglaaverage

   21 teclado: READ ID
   22        | WRITE CONST_STR
   23        | WRITE ID

   24 $@5: /* vacío */

   25 $@6: /* vacío */

   26 $@7: /* vacío */

   27 $@8: /* vacío */

   28 reglabetween: BETWEEN $@5 P_A expresion $@6 COMA C_A expresion $@7 PCOMA expresion $@8 C_C P_C

   29 $@9: /* vacío */

   30 reglaaverage: AVERAGE $@9 P_A C_A listaexpresiones C_C P_C

   31 listaexpresiones: listaexpresiones COMA expresion
   32                 | expresion

   33 $@10: /* vacío */

   34 ciclow: WHILE condicion $@10 bloque ENDW

   35 asignacion: ID OP_AS expresion

   36 seleccion: IF condicion THEN bloque ENDIF
   37          | IF condicion THEN bloque ELSE bloque ENDIF

   38 condicion: comparacion
   39          | comparacion OP_LOG comparacion
   40          | OP_NOT comparacion

   41 $@11: /* vacío */

   42 $@12: /* vacío */

   43 comparacion: expresion $@11 OP_COMPARACION $@12 expresion
   44            | reglabetween

   45 expresion: termino

   46 $@13: /* vacío */

   47 $@14: /* vacío */

   48 expresion: expresion $@13 OP_SURES $@14 termino

   49 termino: factor

   50 $@15: /* vacío */

   51 termino: termino OP_MULTDIV $@15 factor

   52 factor: ID
   53       | CONST_REAL
   54       | CONST_STR
   55       | reglaaverage


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
PROGRAM (258) 2
ENDP (259) 2
DECVAR (260) 4
ENDDEC (261) 4
CONST_REAL (262) 53
CONST_STR (263) 22 54
REAL (264) 9
STRING (265) 10
IF (266) 36 37
THEN (267) 36 37
ELSE (268) 37
ENDIF (269) 36 37
WHILE (270) 34
ENDW (271) 34
OP_LOG (272) 39
OP_NOT (273) 40
ID (274) 11 12 21 23 35 52
OP_COMPARACION (275) 43
OP_AS (276) 35
OP_SURES (277) 48
OP_MULTDIV (278) 51
COMA (279) 12 28 31
P_A (280) 28 30
P_C (281) 28 30
C_A (282) 28 30
C_C (283) 28 30
READ (284) 21
WRITE (285) 22 23
BETWEEN (286) 28
AVERAGE (287) 30
PCOMA (288) 8 28


No terminales con las reglas donde aparecen

$accept (34)
    en la izquierda: 0
programa (35)
    en la izquierda: 2, en la derecha: 0
$@1 (36)
    en la izquierda: 1, en la derecha: 2
est_declaracion (37)
    en la izquierda: 4, en la derecha: 2
$@2 (38)
    en la izquierda: 3, en la derecha: 4
declaraciones (39)
    en la izquierda: 5 6, en la derecha: 4 6
declaracion (40)
    en la izquierda: 8, en la derecha: 5 6
$@3 (41)
    en la izquierda: 7, en la derecha: 8
type (42)
    en la izquierda: 9 10, en la derecha: 8
lista_var (43)
    en la izquierda: 11 12, en la derecha: 8 12
bloque (44)
    en la izquierda: 14 15, en la derecha: 2 15 34 36 37
$@4 (45)
    en la izquierda: 13, en la derecha: 14
sentencia (46)
    en la izquierda: 16 17 18 19 20, en la derecha: 14 15
teclado (47)
    en la izquierda: 21 22 23, en la derecha: 19
reglabetween (48)
    en la izquierda: 28, en la derecha: 44
$@5 (49)
    en la izquierda: 24, en la derecha: 28
$@6 (50)
    en la izquierda: 25, en la derecha: 28
$@7 (51)
    en la izquierda: 26, en la derecha: 28
$@8 (52)
    en la izquierda: 27, en la derecha: 28
reglaaverage (53)
    en la izquierda: 30, en la derecha: 20 55
$@9 (54)
    en la izquierda: 29, en la derecha: 30
listaexpresiones (55)
    en la izquierda: 31 32, en la derecha: 30 31
ciclow (56)
    en la izquierda: 34, en la derecha: 16
$@10 (57)
    en la izquierda: 33, en la derecha: 34
asignacion (58)
    en la izquierda: 35, en la derecha: 18
seleccion (59)
    en la izquierda: 36 37, en la derecha: 17
condicion (60)
    en la izquierda: 38 39 40, en la derecha: 34 36 37
comparacion (61)
    en la izquierda: 43 44, en la derecha: 38 39 40
$@11 (62)
    en la izquierda: 41, en la derecha: 43
$@12 (63)
    en la izquierda: 42, en la derecha: 43
expresion (64)
    en la izquierda: 45 48, en la derecha: 28 31 32 35 43 48
$@13 (65)
    en la izquierda: 46, en la derecha: 48
$@14 (66)
    en la izquierda: 47, en la derecha: 48
termino (67)
    en la izquierda: 49 51, en la derecha: 45 48 51
$@15 (68)
    en la izquierda: 50, en la derecha: 51
factor (69)
    en la izquierda: 52 53 54 55, en la derecha: 49 51


estado 0

    0 $accept: . programa $end

    PROGRAM  desplazar e ir al estado 1

    programa  ir al estado 2


estado 1

    2 programa: PROGRAM . $@1 est_declaracion bloque ENDP

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 3


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


estado 3

    2 programa: PROGRAM $@1 . est_declaracion bloque ENDP

    DECVAR  desplazar e ir al estado 5

    est_declaracion  ir al estado 6


estado 4

    0 $accept: programa $end .

    $default  aceptar


estado 5

    4 est_declaracion: DECVAR . $@2 declaraciones ENDDEC

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


estado 6

    2 programa: PROGRAM $@1 est_declaracion . bloque ENDP

    $default  reduce usando la regla 13 ($@4)

    bloque  ir al estado 8
    $@4     ir al estado 9


estado 7

    4 est_declaracion: DECVAR $@2 . declaraciones ENDDEC

    ID  desplazar e ir al estado 10

    declaraciones  ir al estado 11
    declaracion    ir al estado 12
    lista_var      ir al estado 13


estado 8

    2 programa: PROGRAM $@1 est_declaracion bloque . ENDP
   15 bloque: bloque . sentencia

    ENDP     desplazar e ir al estado 14
    IF       desplazar e ir al estado 15
    WHILE    desplazar e ir al estado 16
    ID       desplazar e ir al estado 17
    READ     desplazar e ir al estado 18
    WRITE    desplazar e ir al estado 19
    AVERAGE  desplazar e ir al estado 20

    sentencia     ir al estado 21
    teclado       ir al estado 22
    reglaaverage  ir al estado 23
    ciclow        ir al estado 24
    asignacion    ir al estado 25
    seleccion     ir al estado 26


estado 9

   14 bloque: $@4 . sentencia

    IF       desplazar e ir al estado 15
    WHILE    desplazar e ir al estado 16
    ID       desplazar e ir al estado 17
    READ     desplazar e ir al estado 18
    WRITE    desplazar e ir al estado 19
    AVERAGE  desplazar e ir al estado 20

    sentencia     ir al estado 27
    teclado       ir al estado 22
    reglaaverage  ir al estado 23
    ciclow        ir al estado 24
    asignacion    ir al estado 25
    seleccion     ir al estado 26


estado 10

   11 lista_var: ID .

    $default  reduce usando la regla 11 (lista_var)


estado 11

    4 est_declaracion: DECVAR $@2 declaraciones . ENDDEC
    6 declaraciones: declaraciones . declaracion

    ENDDEC  desplazar e ir al estado 28
    ID      desplazar e ir al estado 10

    declaracion  ir al estado 29
    lista_var    ir al estado 13


estado 12

    5 declaraciones: declaracion .

    $default  reduce usando la regla 5 (declaraciones)


estado 13

    8 declaracion: lista_var . $@3 PCOMA type
   12 lista_var: lista_var . COMA ID

    COMA  desplazar e ir al estado 30

    $default  reduce usando la regla 7 ($@3)

    $@3  ir al estado 31


estado 14

    2 programa: PROGRAM $@1 est_declaracion bloque ENDP .

    $default  reduce usando la regla 2 (programa)


estado 15

   36 seleccion: IF . condicion THEN bloque ENDIF
   37          | IF . condicion THEN bloque ELSE bloque ENDIF

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    OP_NOT      desplazar e ir al estado 34
    ID          desplazar e ir al estado 35
    BETWEEN     desplazar e ir al estado 36
    AVERAGE     desplazar e ir al estado 20

    reglabetween  ir al estado 37
    reglaaverage  ir al estado 38
    condicion     ir al estado 39
    comparacion   ir al estado 40
    expresion     ir al estado 41
    termino       ir al estado 42
    factor        ir al estado 43


estado 16

   34 ciclow: WHILE . condicion $@10 bloque ENDW

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    OP_NOT      desplazar e ir al estado 34
    ID          desplazar e ir al estado 35
    BETWEEN     desplazar e ir al estado 36
    AVERAGE     desplazar e ir al estado 20

    reglabetween  ir al estado 37
    reglaaverage  ir al estado 38
    condicion     ir al estado 44
    comparacion   ir al estado 40
    expresion     ir al estado 41
    termino       ir al estado 42
    factor        ir al estado 43


estado 17

   35 asignacion: ID . OP_AS expresion

    OP_AS  desplazar e ir al estado 45


estado 18

   21 teclado: READ . ID

    ID  desplazar e ir al estado 46


estado 19

   22 teclado: WRITE . CONST_STR
   23        | WRITE . ID

    CONST_STR  desplazar e ir al estado 47
    ID         desplazar e ir al estado 48


estado 20

   30 reglaaverage: AVERAGE . $@9 P_A C_A listaexpresiones C_C P_C

    $default  reduce usando la regla 29 ($@9)

    $@9  ir al estado 49


estado 21

   15 bloque: bloque sentencia .

    $default  reduce usando la regla 15 (bloque)


estado 22

   19 sentencia: teclado .

    $default  reduce usando la regla 19 (sentencia)


estado 23

   20 sentencia: reglaaverage .

    $default  reduce usando la regla 20 (sentencia)


estado 24

   16 sentencia: ciclow .

    $default  reduce usando la regla 16 (sentencia)


estado 25

   18 sentencia: asignacion .

    $default  reduce usando la regla 18 (sentencia)


estado 26

   17 sentencia: seleccion .

    $default  reduce usando la regla 17 (sentencia)


estado 27

   14 bloque: $@4 sentencia .

    $default  reduce usando la regla 14 (bloque)


estado 28

    4 est_declaracion: DECVAR $@2 declaraciones ENDDEC .

    $default  reduce usando la regla 4 (est_declaracion)


estado 29

    6 declaraciones: declaraciones declaracion .

    $default  reduce usando la regla 6 (declaraciones)


estado 30

   12 lista_var: lista_var COMA . ID

    ID  desplazar e ir al estado 50


estado 31

    8 declaracion: lista_var $@3 . PCOMA type

    PCOMA  desplazar e ir al estado 51


estado 32

   53 factor: CONST_REAL .

    $default  reduce usando la regla 53 (factor)


estado 33

   54 factor: CONST_STR .

    $default  reduce usando la regla 54 (factor)


estado 34

   40 condicion: OP_NOT . comparacion

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    BETWEEN     desplazar e ir al estado 36
    AVERAGE     desplazar e ir al estado 20

    reglabetween  ir al estado 37
    reglaaverage  ir al estado 38
    comparacion   ir al estado 52
    expresion     ir al estado 41
    termino       ir al estado 42
    factor        ir al estado 43


estado 35

   52 factor: ID .

    $default  reduce usando la regla 52 (factor)


estado 36

   28 reglabetween: BETWEEN . $@5 P_A expresion $@6 COMA C_A expresion $@7 PCOMA expresion $@8 C_C P_C

    $default  reduce usando la regla 24 ($@5)

    $@5  ir al estado 53


estado 37

   44 comparacion: reglabetween .

    $default  reduce usando la regla 44 (comparacion)


estado 38

   55 factor: reglaaverage .

    $default  reduce usando la regla 55 (factor)


estado 39

   36 seleccion: IF condicion . THEN bloque ENDIF
   37          | IF condicion . THEN bloque ELSE bloque ENDIF

    THEN  desplazar e ir al estado 54


estado 40

   38 condicion: comparacion .
   39          | comparacion . OP_LOG comparacion

    OP_LOG  desplazar e ir al estado 55

    $default  reduce usando la regla 38 (condicion)


estado 41

   43 comparacion: expresion . $@11 OP_COMPARACION $@12 expresion
   48 expresion: expresion . $@13 OP_SURES $@14 termino

    OP_SURES  reduce usando la regla 46 ($@13)
    $default  reduce usando la regla 41 ($@11)

    $@11  ir al estado 56
    $@13  ir al estado 57


estado 42

   45 expresion: termino .
   51 termino: termino . OP_MULTDIV $@15 factor

    OP_MULTDIV  desplazar e ir al estado 58

    $default  reduce usando la regla 45 (expresion)


estado 43

   49 termino: factor .

    $default  reduce usando la regla 49 (termino)


estado 44

   34 ciclow: WHILE condicion . $@10 bloque ENDW

    $default  reduce usando la regla 33 ($@10)

    $@10  ir al estado 59


estado 45

   35 asignacion: ID OP_AS . expresion

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    AVERAGE     desplazar e ir al estado 20

    reglaaverage  ir al estado 38
    expresion     ir al estado 60
    termino       ir al estado 42
    factor        ir al estado 43


estado 46

   21 teclado: READ ID .

    $default  reduce usando la regla 21 (teclado)


estado 47

   22 teclado: WRITE CONST_STR .

    $default  reduce usando la regla 22 (teclado)


estado 48

   23 teclado: WRITE ID .

    $default  reduce usando la regla 23 (teclado)


estado 49

   30 reglaaverage: AVERAGE $@9 . P_A C_A listaexpresiones C_C P_C

    P_A  desplazar e ir al estado 61


estado 50

   12 lista_var: lista_var COMA ID .

    $default  reduce usando la regla 12 (lista_var)


estado 51

    8 declaracion: lista_var $@3 PCOMA . type

    REAL    desplazar e ir al estado 62
    STRING  desplazar e ir al estado 63

    type  ir al estado 64


estado 52

   40 condicion: OP_NOT comparacion .

    $default  reduce usando la regla 40 (condicion)


estado 53

   28 reglabetween: BETWEEN $@5 . P_A expresion $@6 COMA C_A expresion $@7 PCOMA expresion $@8 C_C P_C

    P_A  desplazar e ir al estado 65


estado 54

   36 seleccion: IF condicion THEN . bloque ENDIF
   37          | IF condicion THEN . bloque ELSE bloque ENDIF

    $default  reduce usando la regla 13 ($@4)

    bloque  ir al estado 66
    $@4     ir al estado 9


estado 55

   39 condicion: comparacion OP_LOG . comparacion

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    BETWEEN     desplazar e ir al estado 36
    AVERAGE     desplazar e ir al estado 20

    reglabetween  ir al estado 37
    reglaaverage  ir al estado 38
    comparacion   ir al estado 67
    expresion     ir al estado 41
    termino       ir al estado 42
    factor        ir al estado 43


estado 56

   43 comparacion: expresion $@11 . OP_COMPARACION $@12 expresion

    OP_COMPARACION  desplazar e ir al estado 68


estado 57

   48 expresion: expresion $@13 . OP_SURES $@14 termino

    OP_SURES  desplazar e ir al estado 69


estado 58

   51 termino: termino OP_MULTDIV . $@15 factor

    $default  reduce usando la regla 50 ($@15)

    $@15  ir al estado 70


estado 59

   34 ciclow: WHILE condicion $@10 . bloque ENDW

    $default  reduce usando la regla 13 ($@4)

    bloque  ir al estado 71
    $@4     ir al estado 9


estado 60

   35 asignacion: ID OP_AS expresion .
   48 expresion: expresion . $@13 OP_SURES $@14 termino

    OP_SURES  reduce usando la regla 46 ($@13)
    $default  reduce usando la regla 35 (asignacion)

    $@13  ir al estado 57


estado 61

   30 reglaaverage: AVERAGE $@9 P_A . C_A listaexpresiones C_C P_C

    C_A  desplazar e ir al estado 72


estado 62

    9 type: REAL .

    $default  reduce usando la regla 9 (type)


estado 63

   10 type: STRING .

    $default  reduce usando la regla 10 (type)


estado 64

    8 declaracion: lista_var $@3 PCOMA type .

    $default  reduce usando la regla 8 (declaracion)


estado 65

   28 reglabetween: BETWEEN $@5 P_A . expresion $@6 COMA C_A expresion $@7 PCOMA expresion $@8 C_C P_C

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    AVERAGE     desplazar e ir al estado 20

    reglaaverage  ir al estado 38
    expresion     ir al estado 73
    termino       ir al estado 42
    factor        ir al estado 43


estado 66

   15 bloque: bloque . sentencia
   36 seleccion: IF condicion THEN bloque . ENDIF
   37          | IF condicion THEN bloque . ELSE bloque ENDIF

    IF       desplazar e ir al estado 15
    ELSE     desplazar e ir al estado 74
    ENDIF    desplazar e ir al estado 75
    WHILE    desplazar e ir al estado 16
    ID       desplazar e ir al estado 17
    READ     desplazar e ir al estado 18
    WRITE    desplazar e ir al estado 19
    AVERAGE  desplazar e ir al estado 20

    sentencia     ir al estado 21
    teclado       ir al estado 22
    reglaaverage  ir al estado 23
    ciclow        ir al estado 24
    asignacion    ir al estado 25
    seleccion     ir al estado 26


estado 67

   39 condicion: comparacion OP_LOG comparacion .

    $default  reduce usando la regla 39 (condicion)


estado 68

   43 comparacion: expresion $@11 OP_COMPARACION . $@12 expresion

    $default  reduce usando la regla 42 ($@12)

    $@12  ir al estado 76


estado 69

   48 expresion: expresion $@13 OP_SURES . $@14 termino

    $default  reduce usando la regla 47 ($@14)

    $@14  ir al estado 77


estado 70

   51 termino: termino OP_MULTDIV $@15 . factor

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    AVERAGE     desplazar e ir al estado 20

    reglaaverage  ir al estado 38
    factor        ir al estado 78


estado 71

   15 bloque: bloque . sentencia
   34 ciclow: WHILE condicion $@10 bloque . ENDW

    IF       desplazar e ir al estado 15
    WHILE    desplazar e ir al estado 16
    ENDW     desplazar e ir al estado 79
    ID       desplazar e ir al estado 17
    READ     desplazar e ir al estado 18
    WRITE    desplazar e ir al estado 19
    AVERAGE  desplazar e ir al estado 20

    sentencia     ir al estado 21
    teclado       ir al estado 22
    reglaaverage  ir al estado 23
    ciclow        ir al estado 24
    asignacion    ir al estado 25
    seleccion     ir al estado 26


estado 72

   30 reglaaverage: AVERAGE $@9 P_A C_A . listaexpresiones C_C P_C

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    AVERAGE     desplazar e ir al estado 20

    reglaaverage      ir al estado 38
    listaexpresiones  ir al estado 80
    expresion         ir al estado 81
    termino           ir al estado 42
    factor            ir al estado 43


estado 73

   28 reglabetween: BETWEEN $@5 P_A expresion . $@6 COMA C_A expresion $@7 PCOMA expresion $@8 C_C P_C
   48 expresion: expresion . $@13 OP_SURES $@14 termino

    OP_SURES  reduce usando la regla 46 ($@13)
    $default  reduce usando la regla 25 ($@6)

    $@6   ir al estado 82
    $@13  ir al estado 57


estado 74

   37 seleccion: IF condicion THEN bloque ELSE . bloque ENDIF

    $default  reduce usando la regla 13 ($@4)

    bloque  ir al estado 83
    $@4     ir al estado 9


estado 75

   36 seleccion: IF condicion THEN bloque ENDIF .

    $default  reduce usando la regla 36 (seleccion)


estado 76

   43 comparacion: expresion $@11 OP_COMPARACION $@12 . expresion

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    AVERAGE     desplazar e ir al estado 20

    reglaaverage  ir al estado 38
    expresion     ir al estado 84
    termino       ir al estado 42
    factor        ir al estado 43


estado 77

   48 expresion: expresion $@13 OP_SURES $@14 . termino

    CONST_REAL  desplazar e ir al estado 32
    CONST_STR   desplazar e ir al estado 33
    ID          desplazar e ir al estado 35
    AVERAGE     desplazar e ir al estado 20

    reglaaverage  ir al estado 38
    termino       ir al estado 85
    factor        ir al estado 43


estado 78

   51 termino: termino OP_MULTDIV $@15 factor .

    $default  reduce usando la regla 51 (termino)


estado 79

   34 ciclow: WHILE condicion $@10 bloque ENDW .

    $default  reduce usando la regla 34 (ciclow)


estado 80

   30 reglaaverage: AVERAGE $@9 P_A C_A listaexpresiones . C_C P_C
   31 listaexpresiones: listaexpresiones . COMA expresion

    COMA  desplazar e ir al estado 86
    C_C   desplazar e ir al estado 87


estado 81

   32 listaexpresiones: expresion .
   48 expresion: expresion . $@13 OP_SURES $@14 termino

    OP_SURES  reduce usando la regla 46 ($@13)
    $default  reduce usando la regla 32 (listaexpresiones)

    $@13  ir al estado 57


estado 82

   28 reglabetween: BETWEEN $@5 P_A expresion $@6 . COMA C_A expresion $@7 PCOMA expresion $@8 C_C P_C

    COMA  desplazar e ir al estado 88


estado 83

   15 bloque: bloque . sentencia
   37 seleccion: IF condicion THEN bloque ELSE bloque . ENDIF

    IF       desplazar e ir al estado 15
    ENDIF    desplazar e ir al estado 89
    WHILE    desplazar e ir al estado 16
    ID       desplazar e ir al estado 17
    READ     desplazar e ir al estado 18
    WRITE    desplazar e ir al estado 19
    AVERAGE  desplazar e ir al estado 20
